log
Thu May 12 23:27:03 UTC 2022: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  2|4
total_score: 15/70
aab1e3f
Fri May 13 00:08:20 UTC 2022: 
 sudoku.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  0|5
total_score: 0/70
b953470
Fri May 13 00:26:44 UTC 2022: 
 sudoku.c | 33 ++++++++++++++++++++++++++-------
 1 file changed, 26 insertions(+), 7 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d0b98eb
Fri May 13 00:28:09 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
944419f
Fri May 13 00:28:55 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
eba59cc
Fri May 13 00:29:40 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
416a6ca
Fri May 13 00:32:48 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
6b34f69
Fri May 13 00:42:24 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
92fb0ed
Fri May 13 00:54:36 UTC 2022: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
416673a
Fri May 13 01:19:29 UTC 2022: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
a1c1494
Fri May 13 01:30:47 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:182:3: error: expected ‘;’ before ‘}’ token
   }
   ^
Compilation failed
daeaa68
Fri May 13 01:30:58 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
17e3d08
